terraform/k8s-src/juice-shop-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snyk-juice-shop
  labels:
    app: snyk-juice-shop
spec:
  type: ClusterIP
  ports:
    - port: 1337
      targetPort: 3000
      protocol: TCP
  selector:
    app: snyk-juice-shop
